# AgentCrash

./: .gitignore  README.md  pyproject.toml
agentcrash/: __init__.py  analyzer.py  chaos.py  cli.py  diff.py  interventions.py  mcp_server.py  redaction.py  replay.py  schema.py  sdk.py  server.py  storage.py  tests_gen.py
agentcrash/integrations/: __init__.py  langchain.py  mcp_client.py  openai_client.py  otel.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  lib.tsx  styles.css  types.ts
apps/web/src/components/: EventInspector.tsx  FailureReport.tsx  ReplayWorkspace.tsx  RunList.tsx  TraceView.tsx
docs/research/: SYNTHESIS.md  agent-chaos-engineering.md  agent-evaluation.md  agent-replay.md  agent-tracing.md  competitors.md  ecosystem.md  licensing.md  mcp.md  opentelemetry.md  security.md
examples/: demo_agent.py
tests/: conftest.py  smoke_manual.py  test_analyzer.py  test_analyzer_v2.py  test_e2e.py  test_langchain.py  test_mcp.py  test_mcp_client.py  test_openai_client.py  test_otel.py  test_replay.py  test_security.py  test_unit.py
