[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentcrash"
version = "0.1.0"
description = "The open-source crash debugger and reliability lab for AI agents. Record → Replay → Analyze → Intervene → Fix."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "AgentCrash Contributors" }]
keywords = ["ai", "agents", "observability", "debugging", "replay", "tracing", "evaluation", "chaos-engineering", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "pydantic>=2.6",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
llm = ["openai>=1.30", "anthropic>=0.25"]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.4"]

[project.scripts]
agentcrash = "agentcrash.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agentcrash"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# UP042: `str, Enum` is intentional — StrEnum changes str() semantics and can
# affect pydantic serialization of event types. Keep the proven form.
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately run long parametrize lines and assert-heavy one-liners.
"tests/**" = ["E501"]